# tauri-vue-app

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue  main.js  tray.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/iconfont/: iconfont.css  iconfont.js  iconfont.json
src/components/layout/: index.vue
src/components/layout/header/: index.vue
src/components/layout/main/: index.vue
src/components/layout/side/: index.vue
src/components/system/: index.vue
src/plugins/: index.js
src/plugins/modules/: element.js  iconfont.js  router.js
src/router/: index.js
src/views/home/: index.vue
src/views/search/: index.vue
